# tractometer

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_package.yml
challenge_scoring/: __init__.py
challenge_scoring/io/: streamlines.py
challenge_scoring/metrics/: invalid_connections.py  scoring.py
challenge_scoring/utils/: attributes.py
